<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CreateMatchActivity">

    <data>
        <variable
            name="viewModel"
            type="ui.viewModel.CreateMatchViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/neutral">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_match"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/daggersquare_oblique"
                android:textColor="@android:color/black"
                android:layout_marginBottom="19dp"/>

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_club_name"
                android:textColor="@android:color/black"
                android:text="@={viewModel.location}" />

            <Spinner
                android:id="@+id/spinnerMatchLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/editTextMatchDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/match_details"
                android:layout_marginTop="16dp"
                android:text="@={viewModel.matchDetails}" />

            <EditText
                android:id="@+id/editTextMatchDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/match_date"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:text="@={viewModel.matchDate}"
                android:focusable="false"
                android:clickable="true" />

            <EditText
                android:id="@+id/editTextMatchStartingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/match_starting_time"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:text="@={viewModel.matchStartingTime}"
                android:focusable="false"
                android:clickable="true" />


            <Button
                android:id="@+id/buttonCreateMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_match" />
        </LinearLayout>
    </ScrollView>
</layout>
