<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ui.viewModel.CreateAccountViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/padelink_logo3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@android:color/transparent">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:text="@={viewModel.firstName}"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_marginBottom="8dp"/>

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:text="@={viewModel.lastName}"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_marginBottom="8dp"/>

                    <Spinner
                        android:id="@+id/gender_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_marginBottom="8dp"
                        android:entries="@array/gender_array"/>

                    <EditText
                        android:id="@+id/birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthdate_dd_mm_yyyy"
                        android:text="@={viewModel.birthdate}"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_marginBottom="8dp"/>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:text="@={viewModel.email}"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_marginBottom="8dp"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_marginBottom="16dp"/>

                    <Button
                        android:id="@+id/button_create_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:onClick="@{() -> viewModel.onCreateAccountClicked()}"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</layout>
