<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ui.viewModel.HomeScreenViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/neutral">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/navigation"
            android:layout_alignParentTop="true"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="-2dp"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/daggersquare"
                    android:text="@string/welcome_message"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/welcomeUser_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="169dp"
                    android:layout_marginTop="-59dp"
                    android:layout_marginEnd="-2dp"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/daggersquare"
                    android:text="@{viewModel.welcomeMessage}"
                    android:textSize="22sp" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/search_bar_background"
                    android:elevation="4dp"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/search_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textColor="@android:color/black"
                        android:hint="@string/search_user"
                        android:padding="10dp" />

                    <Button
                        android:id="@+id/search_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/search" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_joined_matches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/text_joined_matches"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:textColor="@android:color/black"
                        android:text="@string/your_next_matches"
                        android:fontFamily="@font/daggersquare"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_joined_matches"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="8dp"
                        android:scrollbars="vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp">

                        <ImageView
                            android:id="@+id/button_create_match"
                            android:layout_width="333dp"
                            android:layout_height="169dp"
                            android:background="@drawable/ellipse_shape"
                            android:clipToOutline="true"
                            android:contentDescription="@string/create_match"
                            android:scaleType="centerCrop"
                            android:src="@drawable/padellink_creatematch" />

                        <View
                            android:layout_width="333dp"
                            android:layout_height="169dp"
                            android:background="@drawable/ellipse_shape"
                            android:alpha="0.4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/create_match"
                            android:textColor="@android:color/white"
                            android:textSize="23sp"
                            android:fontFamily="@font/daggersquare_oblique"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="0"
                            android:shadowDy="0"
                            android:shadowRadius="6" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/button_join_match"
                            android:layout_width="333dp"
                            android:layout_height="169dp"
                            android:background="@drawable/ellipse_shape"
                            android:clipToOutline="true"
                            android:contentDescription="@string/join_match"
                            android:scaleType="centerCrop"
                            android:src="@drawable/padellink_joinmatch" />

                        <View
                            android:layout_width="333dp"
                            android:layout_height="169dp"
                            android:background="@drawable/ellipse_shape"
                            android:alpha="0.4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="8dp"
                            android:fontFamily="@font/daggersquare_oblique"
                            android:text="@string/join_match_home"
                            android:textColor="@android:color/white"
                            android:textSize="23sp"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="0"
                            android:shadowDy="0"
                            android:shadowRadius="6" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/navigation"
            layout="@layout/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</layout>
